# eatly_backend

./: .pdm-python  build.sh  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
core/: admin.py  helpers.py
core/migrations/: 0001_initial.py  0002_remove_naturalperson_cnh_remove_naturalperson_cpf_and_more.py  0002_rename_nome_category_name.py  0003_alter_restaurant_cnpj_alter_restaurant_note.py  0003_telephone.py  0004_address_alter_category_options.py  0004_address_alter_category_options_category_url_image.py  0004_rename_neighborhood_address_district.py  0005_alter_address_latitude_alter_address_longitude.py  0005_client.py  0006_alter_client_cpf_alter_client_genre.py  0006_alter_naturalperson_document_country_and_more.py  0007_restaurant.py  0007_reviewrestaurant_responsereviewrestaurant.py  0008_alter_reviewrestaurant_note.py  0008_naturalperson_delete_client.py  0009_color_mark_vehicle.py  0009_rename_autor_responsereviewrestaurant_author.py  0010_alter_responsereviewrestaurant_datetime.py  0010_rename_ativo_vehicle_active_and_more.py  0011_alter_color_options_alter_mark_options_and_more.py  0011_rename_datetime_responsereviewrestaurant_date_time_and_more.py  0012_alter_reviewdeliveryman_order_and_more.py  0012_alter_vehicle_plate.py  0013_alter_reviewdeliveryman_order_and_more.py  0013_alter_vehicle_idcolor_alter_vehicle_idmark_and_more.py  0014_product.py  0014_rename_value_product_price.py  0015_alter_product_restaurant.py  0015_category_public_id_cloudinary_and_more.py  0016_alter_restaurant_note.py  0016_recentlyviews.py  0017_alter_restaurant_note.py  0017_restaurant_quantityorders.py  0018_favorite.py  0018_remove_restaurant_quantityorders.py  0019_alter_recentlyviews_viewed_at.py  0019_restaurant_categories.py  0020_alter_category_public_id_cloudinary_and_more.py  0020_alter_naturalperson_date_birth.py  (+27 more)
core/models/: __init__.py  address.py  category.py  client.py  color.py  coupon.py  favorite.py  mark.py  natural_person.py  order.py  orderStatusLog.py  payment.py  product.py  restaurant.py  review_deliveryman.py  review_restaurant.py  telephone.py  vehicle.py
core/serializers/: __init__.py  address.py  category.py  client.py  coupon.py  favorite.py  mark.py  natural_person.py  order.py  orderStatusLog.py  payment.py  product.py  restaurant.py  review_deliveryman.py  review_restaurant.py  serializer_helpers.py  telephone.py  user.py  vehicle.py
core/views/: __init__.py  address.py  category.py  client.py  coupon.py  favorite.py  google.py  mark.py  natural_person.py  order.py  orderStatusLog.py  payment.py  product.py  restaurant.py  review_deliveryman.py  review_restaurant.py  telephone.py  (+3 more)
infra/: __init__.py  cloudinary.py  google.py  helpers.py
usuario/: managers.py  models.py
utils/: helpers.py
(+9 files in other folders)
